--- a/sachnoi/templates/app/change_password.html
+++ b/sachnoi/templates/app/change_password.html
@@ -7,27 +7,26 @@
     <title>Form Đăng Nhập </title>
     
     <link rel="stylesheet" href="{% static 'assets/css/reset.css' %}" />
-    <link rel="stylesheet" href="{% static 'assets/css/styles_login.css' %}" />
+    <link rel="stylesheet" href="{% static 'assets/css/styles_change_password.css' %}" />
       
 </head>
 <body>
     <div class="container">
-        <h2>Đổi Mật Khẩu</h2>
-        <form method="POST">
-            {% csrf_token %}
-            <div>
-                <label for="old_password">Mật khẩu cũ:</label>
-                <input type="password" name="old_password" required>
+        <div class="box">
+            <h2>Đổi Mật Khẩu</h2>
+            <form method="POST">
+                {% csrf_token %}
+                <div>
+                    <input type="password" name="old_password" required placeholder="Mật khẩu cũ">
+                </div>
+                <div>
+                    <input type="password" name="new_password" required placeholder="Mật khẩu mới">
+                </div>
+                <div>
+                    <input type="password" name="confirm_password" required placeholder="Xác nhận mật khẩu mới">
+                </div>
+                <button type="submit">Đổi mật khẩu</button>
             </div>
-            <div>
-                <label for="new_password">Mật khẩu mới:</label>
-                <input type="password" name="new_password" required>
-            </div>
-            <div>
-                <label for="confirm_password">Xác nhận mật khẩu mới:</label>
-                <input type="password" name="confirm_password" required>
-            </div>
-            <button type="submit">Đổi mật khẩu</button>
         </form>
         {% if messages %}
             <ul>
