--- a/sachnoi/static/assets/css/styles_detail.css
+++ b/sachnoi/static/assets/css/styles_detail.css
@@ -13,6 +13,7 @@
     width: 30%;
     background: var(--color-four);
     border-radius: 20px;
+    height: 100%;
 }
 
 .container-one .sidebar-box .sidebar-header {
@@ -39,6 +40,7 @@
 
 .container-one .sidebar-box .sidebar-header .book-information {
     margin-left: 10px;
+    width: 70%
 }
 
 .container-one .sidebar-box .sidebar-header .book-information h1 {
@@ -94,7 +96,7 @@
     margin-right: auto;
     overflow: hidden;
     margin-top: 20px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 
 .container-one .sidebar-box .book-image .image {
@@ -164,10 +166,12 @@
     display: block;
 }
 
+.container-one .sidebar-box .ml audio{
+    width: 85%;
+    margin-bottom: 30px;
+}
+  
 @media (max-width: 1200px){
-    .container-one {
-        height: 610px;
-    }
     .container-one .sidebar-box {
         width: 37%;
     }
@@ -188,9 +192,6 @@
 }
 
 @media (max-width: 1028px){
-    .container-one {
-        height: 550px;
-    }
     .container-one .sidebar-box .sidebar-header .author-image {
         width: 33px;
         height: 33px;
@@ -208,9 +209,6 @@
 }
 
 @media (max-width: 830px){
-    .container-one {
-        height: 430px;
-    }
     .container-one .sidebar-box .sidebar-header i {
         font-size: 20px;
     }
@@ -229,6 +227,10 @@
     }
     .container-one .sidebar-box .sidebar-content h3 {
         font-size: 11px;
+    }
+    .container-one .sidebar-box .ml audio{
+        width: 80%;
+        height: 40px;
     }
 }
 
@@ -266,13 +268,14 @@
 
 .container-one .description-box p{
     width: 100%;
-    font-size: 13px;
+    font-size: 14px;
     text-indent: 30px;
 }
 
 .container-one .description-box .main-content {
     margin-bottom: 40px;
-    
+    width: 100%;
+    height: auto;
 }
 
 @media (max-width: 1200px){
@@ -301,7 +304,7 @@
     .container-one .description-box {
         width: 100%;
         height: 100%;
-        margin-top: 20px;
+        max-height: 350px;
     }
 }
 
@@ -309,117 +312,6 @@
 
 /* end section one */
 
-/* chat box */
-.container-three {
-    margin-top: 50px;
-    height: 600px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    position: relative;
-}
-.container-three .head-chat-box {
-    background: var(--color-three);
-    padding: 15px 20px;
-    font-size: 22px;
-    font-weight: 600;
-    border-radius: 10px;
-    height: 50px;
-}
-.container-three .chat-content {
-    height: calc(100% - 50px);
-    position: relative;
-}
-.chat-messages {
-    padding: 15px;
-    height: 470px;
-    overflow-y: auto;
-    position: relative;
-}
-.message {
-margin-bottom: 10px;
-}
-.message.user {
-text-align: right;
-}
-.message.user .message-content {
-background-color: var(--color-four);
-display: inline-block;
-padding: 10px;
-border-radius: 10px;
-}
-.message.bot {
-text-align: left;
-}
-.message.bot .message-content {
-background-color: #f1f1f1;
-color: black;
-display: inline-block;
-padding: 10px;
-border-radius: 8px;
-}
-.container-three .chat-content .chat-input {
-    position: absolute;
-    bottom: 0;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    border: 1.5px solid var(--color-four);
-    width: calc(100% - 20px); 
-    height: 50px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    
-}
-#question-input {
-    border: none;
-    margin-left: 15px;
-}
-.container-three .chat-content .chat-input button {
-    margin-right: 15px;
-    background: var(--color-four);
-    border: none;
-    padding: 7px 15px;
-    border-radius: 10px;  
-    outline: none;
-    box-shadow: 0.1px 0.1px #999;
-    display: inline-block;
-    transition: transform 0.2s;
-}
-.container-three .chat-content .chat-input button:hover {
-    transform: scale(1.05);
-}
-.container-three .chat-content .chat-input button:active {   
-    box-shadow: 0.1px 0.1px #999; 
-    transform: translateY(4px);
-}
-@media (max-width: 640px) {
-    .container-three {
-        margin-top: 550px;
-    }
-    .container-three .head-chat-box {
-        font-size: 18px;
-    }
-    .message.user .message-content {
-        font-size: 12px;
-    }
-    .message.bot .message-content {
-        font-size: 12px;
-    }
-    .container-three .chat-content .chat-input {
-        height: 40px;
-    }
-    #question-input {
-        font-size: 12px;
-    }
-    .container-three .chat-content .chat-input button {
-        font-size: 12px;
-        padding: 8px 10px;
-        border-radius: 7px; 
-        margin-right: 5px;
-    }
-}
-/* end chat box */
 
 /* section two */
 .container-two .suggestion-title {
