--- a/sachnoi/templates/app/account.html
+++ b/sachnoi/templates/app/account.html
@@ -39,15 +39,15 @@
             </ul>
         </div>
 
-        {% comment %} <div class="bar">
+        <div class="bar">
             <i class="fa-solid fa-bars" id="bar-icon"></i>
             <ul class="dropdown-menu-bar" id="dropdown-menu-bar">
-                <li class="title-page"><a href="{% url 'index' %}">Trang chủ</a></li>
+                <li><a href="{% url 'index' %}">Trang chủ</a></li>
                 <li><a href="{% url 'discover' %}">Khám phá</a></li>
                 <li><a href="{% url 'author' %}">Tác giả</a></li>
                 <li><a href="{% url 'category' %}">Thể loại</a></li>
             </ul>
-        </div> {% endcomment %}
+        </div>
 
         <div class="personal-account">
             <img src="{% static 'assets/images/Flag_of_Vietnam.svg.webp' %}" 
