--- a/sachnoi/templates/app/favorite_books.html
+++ b/sachnoi/templates/app/favorite_books.html
@@ -42,7 +42,7 @@
         <div class="bar">
             <i class="fa-solid fa-bars" id="bar-icon"></i>
             <ul class="dropdown-menu-bar" id="dropdown-menu-bar">
-                <li class="title-page"><a href="{% url 'index' %}">Trang chủ</a></li>
+                <li><a href="{% url 'index' %}">Trang chủ</a></li>
                 <li><a href="{% url 'discover' %}">Khám phá</a></li>
                 <li><a href="{% url 'author' %}">Tác giả</a></li>
                 <li><a href="{% url 'category' %}">Thể loại</a></li>
@@ -66,10 +66,15 @@
             <h3>{{request.user.email}}</h3>
             <ul>
                 <li>
-                    <a href="{% url 'book_history' %}" >
+                    <a href="{% url 'book_history' %}">
                             Sách đã đọc
                     </a>
-                </li> 
+                </li>
+                <li>
+                    <a href="/favorite/" class="page-title">
+                            Sách yêu thích
+                    </a>
+                </li>
                 <li>
                     <a href="{% url 'save_book' %}">
                             Sách đã lưu
@@ -181,6 +186,23 @@
             </div>
         </div>
     </div>
-   
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const barIcon = document.getElementById("bar-icon");
+            const dropdownMenuBar = document.getElementById("dropdown-menu-bar");
+    
+            // Hiển thị / ẩn menu khi click vào ảnh
+            barIcon.addEventListener("click", function() {
+                dropdownMenuBar.style.display = dropdownMenuBar.style.display === "block" ? "none" : "block";
+            });
+    
+            // Ẩn menu nếu click ra ngoài
+            document.addEventListener("click", function(event) {
+                if (!barIcon.contains(event.target) && !dropdownMenuBar.contains(event.target)) {
+                    dropdownMenuBar.style.display = "none";
+                }
+            });
+        });
+    </script>
 </body>
 </html>
