--- a/sachnoi/templates/app/base.html
+++ b/sachnoi/templates/app/base.html
@@ -4,24 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text to Speech</title>
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <link rel="stylesheet" href="{% static 'assets/css/reset.css' %}" />
     <link rel="stylesheet" href="{% static 'assets/css/base.css' %}" />
     <link rel="stylesheet" href="{% static 'assets/css/styles.css' %}" />
-    <link rel="stylesheet" href="{% static 'assets/css/text_to_speech.css' %}" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    <style> 
-        p {
-            margin-top: 60px;
-        }
-    </style>
+
+
+
 </head>
 <body>
+    <!-- header -->
+    
     <header class="header">
         {% comment %} <div class="search-container">
             <input type="text" placeholder="Tìm kiếm" class="search-input">
@@ -79,87 +78,6 @@
         </div>
         
     </header>
-    <div class="container_text">
-        <h1 >Chuyển Văn Bản Thành Giọng Nói</h1>
-        {% comment %} <form method="post"  id="id_text" class ="audi">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" name="action" value="download">Tải về</button>
-        </form> {% endcomment %}
 
-        <form method="post" id="id_text" class="audi">
-            {% csrf_token %}
-            
-            <!-- Text Input -->
-            <div class="form-group">
-                {{ form.text.label_tag }}
-                {{ form.text }}
-            </div>
-        
-            <!-- Speed and Voice Inputs -->
-            <div class="input-group">
-                <div class="form-group">
-                    {{ form.speed.label_tag }}
-                    {{ form.speed }}
-                </div>
-                
-                <div class="form-group">
-                    {{ form.voice.label_tag }}
-                    {{ form.voice }}
-                </div>
-            </div>
-        
-            <!-- Buttons -->
-            <div class="button-group">
-                <button type="submit" name="action" value="download" class="btn-download">
-                    <i class="fas fa-download"></i> Tải về
-                </button>
-            </div>
-        </form>
-        
-        
-            {% comment %} {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" name="action" value="play">Phát trực tiếp</button>
-            <button type="submit" name="action" value="download">Tải về</button> {% endcomment %}
-    </div>    
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const userImage = document.getElementById("user-image");
-            const dropdownMenu = document.getElementById("dropdown-menu");
-    
-            // Hiển thị / ẩn menu khi click vào ảnh
-            userImage.addEventListener("click", function() {
-                dropdownMenu.style.display = dropdownMenu.style.display === "block" ? "none" : "block";
-            });
-    
-            // Ẩn menu nếu click ra ngoài
-            document.addEventListener("click", function(event) {
-                if (!userImage.contains(event.target) && !dropdownMenu.contains(event.target)) {
-                    dropdownMenu.style.display = "none";
-                }
-            });
-        });
-    </script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const barIcon = document.getElementById("bar-icon");
-            const dropdownMenuBar = document.getElementById("dropdown-menu-bar");
-    
-            // Hiển thị / ẩn menu khi click vào ảnh
-            barIcon.addEventListener("click", function() {
-                dropdownMenuBar.style.display = dropdownMenuBar.style.display === "block" ? "none" : "block";
-            });
-    
-            // Ẩn menu nếu click ra ngoài
-            document.addEventListener("click", function(event) {
-                if (!barIcon.contains(event.target) && !dropdownMenuBar.contains(event.target)) {
-                    dropdownMenuBar.style.display = "none";
-                }
-            });
-        });
-    </script>
-        
-      
 </body>
 </html>
