--- a/sachnoi/static/assets/css/styles_favorite_books.css
+++ b/sachnoi/static/assets/css/styles_favorite_books.css
@@ -165,3 +165,13 @@ h3 {
     }
 }
 /* end container-one */
+
+.content a {
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s;
+}
+
+.content a:hover {
+    transform: scale(1.05);
+}
