--- a/sachnoi/static/assets/css/text_to_speech.css
+++ b/sachnoi/static/assets/css/text_to_speech.css
@@ -2,7 +2,7 @@
 /* Tổng thể trang */
 body {
     background-color: #f5f5f5;
-    font-family: 'Arial', sans-serif;
+    /* font-family: 'Arial', sans-serif; */
 }
 
 /* Tiêu đề */
