--- a/sachnoi/templates/app/index.html
+++ b/sachnoi/templates/app/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" href="{% static 'assets/images/icon.webp' %}" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
@@ -215,7 +216,8 @@
                 <div class="sidebar for-you-sidebar">
                     <div class="book-time">
                         <i class="fa-regular fa-clock"></i>
-                        <span class="time">2 giờ, 07 phút</span>
+                        <span class="time audio-duration" data-src="{{ book.audio_file.url }}"> Đang tải...</span>
+                        
                     </div>
                     <div class="icon">
                         <i class="fa-solid fa-circle-play"></i>
@@ -262,6 +264,23 @@
             });
         });
     </script>
+    
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        document.querySelectorAll(".audio-duration").forEach(span => {
+            let audio = new Audio(span.dataset.src);
+            audio.addEventListener("loadedmetadata", () => {
+                let duration = Math.round(audio.duration);
+                // giải thích tẹo nha cái duration là a dùng để lấy thời gian trong file sách tương ứng ở trên database á
+                let minutes = Math.floor(duration / 60);
+                let seconds = duration % 60;
+                span.textContent = ` ${minutes}:${seconds.toString().padStart(2, "0")}`;
+            });
+        });
+    });
+</script>
+
 
     
 </body>
